# literev-docker-base

./: .containers-sugar.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
conda/: base.yaml  service-linux-extra.yaml
containers/: compose.yaml  entrypoint.sh
containers/literev/: Dockerfile
scripts/: healthcheck.sh
