[tool.poetry]
name = "literev"
# version of the literev-docker-base
version = "0.1.0"  # semantic-release
description = ""
authors = ["Aziza", "Erol"]

[tool.poetry.dependencies]
python = "3.9.*"
psycopg2-binary = "2.9.3"
bs4 = "^0.0.1"
bokeh = "^3.0.3"
django = "^4.1.5"
gensim = "^4.3.0"
hdbscan = "0.8.28"
joblib = "1.1.0"
langdetect = "^1.0.9"
lxml = "^4.9.2"
matplotlib = "^3.6.3"
nltk = "^3.8.1"
numpy = ">=1.20,<1.24"
optuna = "3.1.0"
pandas = "1.4.*"
pip = "^22.3.1"
scikit-learn = "1.1.3"
spacy = "3.2.0"
scipy = "^1.10.0"
pyspellchecker = "^0.7.1"
tqdm = "^4.64.1"
unidecode = "^1.3.6"
yake = "^0.4.8"
django-oauth-toolkit = "1.7.0"
pacmap = "0.6.*"
pypdf2 = "2.2.1"
stop-words = "^2018.7.23"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"}
sqlalchemy = "2.0.0"
# indirect dependency
annoy = "1.17.1"
openai = "^0.27.4"
django-allauth = "^0.54.0"
urllib3 = "<2"
docker = "^6.1.0"
jinja2 = "<3.0.3"
typing-extensions = "<4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
